--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@babel/runtime": "^7.6.2",
+		"body-parser": "^1.19.0",
 		"concurrently": "^4.1.2",
 		"cookie-session": "^1.3.3",
 		"express": "^4.17.1",
@@ -26,7 +27,8 @@
 		"passport-google-oauth20": "^2.0.0",
 		"react-redux": "^7.1.1",
 		"react-router-dom": "^5.1.2",
-		"redux": "^4.0.4"
+		"redux": "^4.0.4",
+		"stripe": "^7.13.1"
 	},
 	"devDependencies": {}
 }
